--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 9909
-spring.datasource.url= jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url= jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.datasource.username=janak
 spring.datasource.password=root
