--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500MB
 
@@ -10,6 +9,10 @@ spring.h2.console.enabled=true
 spring.datasource.username=janak
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.h2.Driver
+
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 
 
 #jwt.secret=8Um&fA&,(Y}VX8aT5nzg3?VDW$hP&cb)W+rQhT]U*)nJ,j,9F46BzH]r3c!nQ)HRB3Z4K@Pj%$$CbDgXq[6At&8CR_V:u7Q;WhX7}Lx/gyjBav6{$cFr&iDW_,BkzquBtUmFkt*3P3&HhgK)=XuEFR]u*D7X%%Q3a&cw?a+e4+tXwepcUw}Fc8Wa%vDnumi@UQ#!tATb
