--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,15 @@ spring.servlet.multipart.max-file-size=500MB
 project.image=images/
 
 server.port = 9909
-spring.datasource.url= jdbc:h2:mem:testdb
+spring.datasource.url= jdbc:h2:file:./data/fileDB
 spring.h2.console.enabled=true
 spring.datasource.username=janak
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.h2.Driver
-
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 
 
 
